[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-sqlite-ui"
version = "1.0.0"
description = "A lightweight, plug-and-play SQLite administration panel UI for FastAPI."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "hoangtuvungcao"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi>=0.100.0",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "/venv",
  "/test_app.py",
  "/*.db",
  "/*.sqlite",
]

[tool.hatch.build.targets.wheel]
packages = ["fastapi_sqlite_ui"]
